fix overflow problem and ease mail length

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1,5 +1,6 @@
 html, body {
   margin: 0;
+  padding: 0;
   overflow-x: hidden;
   overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.578);
